stretch body to full window width, fixes #276

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
     /* Fix for CKEditor block gutter icon "stretching" body and causing scrollbar to appear after pressing enter
        on the last line of the editor. */
     position: fixed;
+    width: 100%;
 }
 
 #title-container {
